Huyen pull code anh Hau

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-**/.idea
-**/.vscode
-**/out
-**/bin
-**/lib
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+**/out/
+**/.idea/
+/out/
+.DS_Store
